eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 058264158990.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:ce55b0d0a98310353ebb27bb573354c8944ee5d1
        ports:
        - containerPort: 8080
